include_directories(
.
../inc
${PTHREAD_INC_DIR}
)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_LIBRARY(xdbc STATIC ${SRC_LIST})

ADD_DEFINITIONS(-DUNICODE -D_UNICODE -DHAVE_STRUCT_TIMESPEC)
if(WIN32)
	ADD_DEFINITIONS(-D_AFXDLL)
	ADD_MSVC_PRECOMPILED_HEADER(${STDAFX_PCH_H} ${STDAFX_PCH_C} ${SRC_LIST})
endif()
